--- a/ERS_Angular/src/app/manager/manager.component.html
+++ b/ERS_Angular/src/app/manager/manager.component.html
@@ -1,66 +1,63 @@
 <div class="form-container">
   <div>
-    <h2>finance manager home</h2>
-    <div>
-      <h2 id="welcomeTextName">[USER NOT FOUND]</h2>
-    </div>
+      <h2 id="welcomeTextName">Welcome, {{getUser() | uppercase }}</h2>    
+      <br />
   </div>
-  <br /><br />
-  <div>
-    <h4>Approve Reimbursement</h4>
-    <input
-      id="reiAppId"
-      type="number"
-      placeholder="reimbursement id"
-      name="reiAppId"
-    />
-    <input class="blue" id="approveRei" type="submit" value="Approve" />
-  </div>
+  
+  <h4>Approve Reimbursement</h4>
+  <form novalidate #appRei="ngForm" (ngSubmit)="approveReimb()" >
+    <input type="number" placeholder="reimbursement id" name="reiAppId" [(ngModel)]="reimbIdNumberApp" required>
+    <input type="submit" value="Approve" [disabled]="appRei.invalid">
+  </form>
+  <br>
 
-  <div>
-    <h4>Deny Reimbursement</h4>
-    <input
-      id="reiDenId"
-      type="number"
-      placeholder="reimbursement id"
-      name="reiDenId"
-    />
-    <input class="blue" id="denyRei" type="submit" value="Deny" />
-  </div>
-
-  <div>
-    <h4>Employees Requests</h4>
-    <select name="filterRei" id="filterRei" placeholder="filter by">
-      <option value="0">All</option>
-      <option value="1">Pending</option>
-      <option value="2">Approved</option>
-      <option value="3">Denied</option>
-    </select>
-    <input class="blue" id="filterR" type="submit" value="Filter" />
-    <input class="blue" id="Refresh" type="submit" value="Refresh" />
-  </div>
+  <h4>Reject Reimbursement</h4>
+  <form novalidate #denyRei="ngForm" (ngSubmit)="denyReimb()" >
+    <input type="number" placeholder="reimbursement id" name="reiAppId" [(ngModel)]="reimbIdNumberDeny" required>
+    <input type="submit" value="Reject" [disabled]="denyRei.invalid">
+  </form>
   <br />
+
   <div>
+    <br>
+    <h5>REIMBURSEMENT REQUESTS </h5>    
+    <select id="filterReis" name="reimbs" [(ngModel)]="selected" (ngModelChange)="onSelect()" >
+      <option disabled selected>Filter</option>
+      <option *ngFor="let reis of filterRei; let i = index " [value]="reis">
+        {{reis}}
+      </option>     
+    </select> 
+    <input class="blue" id="Refresh" type="submit" value="Remove Filter" (click)="removeFilter()" />
+    <input class="blue" id="Refresh" type="submit" value="Refresh" (click)="reloadCurrentPage()" />
+    <br><br>
+
     <table id="empTable" class="table">
       <thead>
         <tr class="table-info">
-          <!-- <th scope="col">Index</th> -->
           <th scope="col">ID</th>
           <th scope="col">Amount</th>
-          <th scope="col">Submitted</th>
-          <th scope="col">Resolved</th>
           <th scope="col">Description</th>
-          <th scope="col">Author</th>
-          <th scope="col">Resolver ID</th>
-          <th scope="col">Status ID</th>
-          <th scope="col">Type ID</th>
           <th scope="col">Status</th>
           <th scope="col">Type</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
+          <th scope="col">Employee</th>
+          <th scope="col">Submitted</th>
+          <th scope="col">Resolved</th>          
         </tr>
       </thead>
       <tbody id="empTableBody"></tbody>
+      <tr *ngFor="let user in reiArray">        
+      <ng-template *ngFor="let rei in user.reimbursements"> 
+        <td>{{rei.reiId}}</td>
+        <td>{{rei.rei_amount | number:"1.2" }}</td>
+        <td>{{rei.rei_description | uppercase}}</td>  
+        <td>{{rei.reiStatus}}</td>  
+        <td>{{rei.reiType}}</td>
+        <!-- <td>{{user.firstName +" "+user.lastName}}</td> -->
+        <td>{{rei.reiType}}</td>
+        <td>{{rei.rei_submitteDate | date:"MM/dd/yy"}}</td>            
+        <td>{{rei.rei_resolvedDate ? (rei.rei_resolvedDate | date:"MM/dd/yy") : '_____'}}</td> 
+      </ng-template>      
+    </tr>           
     </table>
   </div>
 
