changes on angular outside of repository

--- a/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
@@ -6,6 +6,10 @@
     crossorigin="anonymous"
   />
 </head> -->
+  <div>
+    <h4>Type of User</h4>
+    <h4>{{outputMessage}}</h4>
+  </div>
   <div id="login-form">
 
     <div class="card card-container">
