--- a/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-
+<!-- <h2>Greeting</h2> -->
+<h4 align="right">{{greetingMessage}}</h4>
 
 <div id="login-form">
   <div class="card card-container">
