refresh tables and inputs

--- a/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
@@ -37,7 +37,7 @@
     </select>
 
     <input class="blue" id="Refresh" type="submit" value="Remove Filter" (click)="removeFilter()" />
-    <input class="blue" id="Refresh" type="submit" value="Refresh" (click)="reloadCurrentPage()" />
+    <input class="blue" id="Refresh" type="submit" value="Refresh" (click)="refreshTable()" />
     <br><br>
 
     <table id="empTable" class="table">
