Profile pictures working

--- a/src/main/resources/frontend/ERS_Angular/src/app/manager/manager.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/manager/manager.component.html
@@ -1,7 +1,10 @@
+<app-profile-picture></app-profile-picture>
 <div class="form-container">
   <div>
       <h2 id="welcomeTextName">Welcome, {{getUser() | uppercase }}</h2>    
       <br />
+  </div>
+  <div>
   </div>
   <div class="signin">
           <h4>Approve Reimbursement</h4>
