--- a/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
@@ -1,3 +1,4 @@
+<app-profile-picture></app-profile-picture>
 <div class="form-container">
 
   <div>
@@ -20,7 +21,7 @@
       <input type="submit" value="Create" [disabled]="myForm.invalid">
 
     </form>
-
+    <br><br><br><br>
   
 
   </div> 
