--- a/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <!-- <h2>Greeting</h2> -->
-<h4 align="right">{{greetingMessage}}</h4>
+<div class="background">
+<h4 align="left">{{greetingMessage}}</h4>
 
 <div id="login-form">
   <div class="card card-container">
@@ -26,4 +27,6 @@
       </div>
     </form>
   </div>
+</div>
+
 </div>
