--- a/src/main/resources/frontend/ERS_Angular/src/app/manager/manager.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/manager/manager.component.html
@@ -1,3 +1,4 @@
+<div class="background">
 <app-profile-picture></app-profile-picture>
 <div class="form-container">
   <div>
@@ -69,4 +70,6 @@
   
   <br>
   <button type="submit" class="btn btn-primary" routerLink="/login" >Logout</button>
+</div>
+
 </div>
