--- a/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/employee/employee.component.html
@@ -1,3 +1,4 @@
+<div class="background">
 <app-profile-picture></app-profile-picture>
 <div class="form-container">
 
@@ -73,4 +74,7 @@
 
   <br>
   <button type="submit" class="btn btn-primary" routerLink="/login">Logout</button>
+</div>
+
+
 </div>
