--- a/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.css
+++ b/src/main/resources/frontend/ERS_Angular/src/app/login/login.component.css
@@ -1,4 +1,5 @@
 label {
+  
   display: block;
   margin-top: 10px;
 }
@@ -10,6 +11,7 @@ label {
 }
 
 .card {
+  
   background-color: #f7f7f7;
   padding: 20px 25px 30px;
   margin: 0 auto 25px;
@@ -23,6 +25,7 @@ label {
 }
 
 .profile-img-card {
+  
   width: 80px;
   height: 80px;
   margin: 0 auto 10px;
@@ -33,13 +36,21 @@ label {
 }
 
 .login-form {
+  
   position: relative;
   height: 560px;
   width: 405px;
   margin: auto;
-  padding: 60px 60px;
-  background: url(../../assets/329985-Astronaut-Outer-Space-Stars-Planet-4K-iphone-wallpaper.jpg)
-    no-repeat #505050;
+  padding: 60px 60px;  
   background-size: cover;
   box-shadow: 0px 30px 60px -5px #000;
+}
+
+.background{
+  background-image: url(../../assets/photo-1657278127206-3299435f1cad.jpg) ;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  padding-top: 5%;
+  padding-bottom: 15%;
 }
