--- a/src/main/resources/static/src/app/employee/employee.component.css
+++ b/src/main/resources/static/src/app/employee/employee.component.css
@@ -3,5 +3,19 @@
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: auto;
+    background-color: aliceblue;
+    padding-top: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
 
 }
+
+.background{
+    background-image: url(../../assets/photo-1657278127206-3299435f1cad.jpg) ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 5%;
+    padding-bottom: 15%;
+  }
