--- a/src/main/resources/static/src/app/login/login.component.html
+++ b/src/main/resources/static/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <!-- <h2>Greeting</h2> -->
-<h4 align="right">{{greetingMessage}}</h4>
+<div class="background">
+<h4 align="left">{{greetingMessage}}</h4>
+
 <div id="login-form">
   <div class="card card-container">
     <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" />
@@ -25,4 +27,6 @@
       </div>
     </form>
   </div>
+</div>
+
 </div>
