--- a/src/main/resources/static/src/app/login/login.component.html
+++ b/src/main/resources/static/src/app/login/login.component.html
@@ -16,8 +16,16 @@
           No user found. 
         </div> -->
         <br />
-        <p routerLink="/loginreset"
-            style="color:dodgerblue; cursor: pointer">Forgot password?</p>
+        <div style="display:inline-block; 
+                    white-space: nowrap; text-align: right; min-width: 70px;">
+        <a routerLink="/register" 
+            style="color:dodgerblue; cursor: pointer; 
+              margin-right: 15px; margin-left: 120px;">Register</a>
+           
+        <a routerLink="/loginreset" 
+            style="color:dodgerblue; cursor: pointer">Forgot password?</a>
+        </div> 
+        <br>   
         <div *ngIf="noUserFoundMessage != '' ">{{noUserFoundMessage}}</div>
         <br>
       <div class="form-group">
