--- a/src/main/resources/static/src/app/profile-picture/profile-picture.component.html
+++ b/src/main/resources/static/src/app/profile-picture/profile-picture.component.html
@@ -1,13 +1,15 @@
 <div class="pfp" type="file" >
-    <input type="file" id="imgupload" (change)="onFileSelected($event)" /> 
-    <ng-container *ngIf="src != null || '' || undefined; else elseBlock">
+    <input type="file" id="imgupload" (change)="onFileSelected($event)" />
+    <div> 
+    <ng-container *ngIf="src != null ; else elseBlock">
         <div>
             <img [src]="src" [width]="size" [height]="size" />        
         </div>
     </ng-container>
     <ng-template #elseBlock>
         <div>
-            <img [width]="size" [height]="size" src="https://via.placeholder.com/100.png?text=Avitar-Picture" alt=" ">
+            <img [src]="placeholderPfp" [width]="size" [height]="size" />
         </div>
     </ng-template>
+    </div>
 </div>
