--- a/src/main/resources/static/src/app/components/login-reset/login-reset.component.html
+++ b/src/main/resources/static/src/app/components/login-reset/login-reset.component.html
@@ -1,7 +1,7 @@
 <div class="background">
 <div id="login-form">
     <div class="card card-container">
-      <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" />
+      <img id="profile-img" src="../../../assets/avatar_2x.png" class="profile-img-card" />
       <form novalidate  #myLoginGroup="ngForm" (ngSubmit)="passwordReset()" >
           <label for="username">Username</label>
           <input required type="text" name="username" class="form-control" 
