--- a/src/main/resources/static/src/app/components/login/login.component.html
+++ b/src/main/resources/static/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
 
 <div id="login-form">
   <div class="card card-container">
-    <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" />
+    <img id="profile-img" src="../../../assets/avatar_2x.png" class="profile-img-card" />
     <form novalidate  #myLoginGroup="ngForm" (ngSubmit)="loginUser()">
         <label for="username">Username</label>
         <input required type="text" name="username" class="form-control" 
