--- a/src/main/resources/static/src/styles.css
+++ b/src/main/resources/static/src/styles.css
@@ -1,3 +1,24 @@
 
 /* html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+.btn-primary, .dropdown-toggle, .btn-group,.data-bs-toggle
+{    
+    background-color: rgb(78, 225, 225) !important;
+    color: black !important; 
+    border-color: black !important;
+}
+
+.btn-primary:hover, .dropdown-toggle:hover{
+    background-color: rgb(27, 155, 155) !important;
+    color: black; 
+    border-color: black;
+    
+}
+
+.btn-primary:active, .dropdown-toggle:active{
+    background-color: rgb(78, 225, 225);
+    color: black; 
+    border-color: black;
+}
+
