--- a/src/main/resources/static/src/app/components/dialog-boxes/rei-dialog/rei-dialog.component.css
+++ b/src/main/resources/static/src/app/components/dialog-boxes/rei-dialog/rei-dialog.component.css
@@ -19,12 +19,8 @@
 	cursor: pointer;
 }
 
-/* .table, th, td {
-	background-color: aliceblue;	
+.input-fields {
+	color: black;
 }
-td {
-	color: brown;
-	margin-right: 125px;
-} */
 
 
