--- a/src/main/resources/static/src/app/components/finalizepasswordreset/finalizepasswordreset.component.html
+++ b/src/main/resources/static/src/app/components/finalizepasswordreset/finalizepasswordreset.component.html
@@ -22,14 +22,12 @@
             <br> 
             <div class="form-group">
               <div *ngIf="message != '';else elseBlock ">
-                <input type="submit" style="background-color:DodgerBlue; color: #fff;"         
-                class="btn btn-primary" class="form-control"          
+                <input type="submit" class="btn btn-primary  form-control"          
                 value="Back to Login" 
                 routerLink="/login">
               </div> 
               <ng-template #elseBlock>
-              <input type="submit" style="background-color:DodgerBlue; color: #fff;"         
-                class="btn btn-primary" class="form-control"          
+              <input type="submit" class="btn btn-primary  form-control"          
                 value="Reset password" 
                 [disabled]="myLoginGroup.invalid">
               </ng-template>
