--- a/src/main/resources/static/src/app/components/profile-picture/profile-picture.component.html
+++ b/src/main/resources/static/src/app/components/profile-picture/profile-picture.component.html
@@ -1,15 +1,14 @@
-<div class="pfp" type="file" >
-    <input type="file" id="imgupload" (change)="onFileSelected($event)" />
-    <div> 
+<div  class="pfp">
+    <input type="file" #file  (change)="onFileSelected($event)" class="input-type-file-upload" />
     <ng-container *ngIf="src != null ; else elseBlock" >
-        <div>
-            <img [src]="src" [width]="size" [height]="size" />        
+        <div >
+            <img [src]="src" [width]="size" [height]="size" (click)="file.click()"/>        
         </div>
     </ng-container>
     <ng-template #elseBlock >
         <div>
-            <img [src]="placeholderPfp" [width]="size" [height]="size" />
+            <img [src]="placeholderPfp" [width]="size" [height]="size" (click)="file.click()" />
         </div>
     </ng-template>
-    </div>
 </div>
+<hr>
