pdf request done

--- a/src/main/resources/frontend/ERS_Angular/src/app/components/employee/employee.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/components/employee/employee.component.html
@@ -65,6 +65,7 @@
 
     <br>
     <!-- TABLE STARTS HERE -->
+    <app-pdf-report></app-pdf-report>
     
     <div [style.visibility]="dataLoading ? 'hidden' : 'visible' ">
       <div class="example-container ">
