--- a/src/main/resources/frontend/ERS_Angular/src/app/components/dialog-boxes/mng-dialog/mng-dialog.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/components/dialog-boxes/mng-dialog/mng-dialog.component.html
@@ -1,10 +1,10 @@
-<div mat-dialog-content >
+<span mat-dialog-content >
     <button mat-button class="closeX ml-auto"  (click)="onNoClick()" >
         &#10006;
     </button>
     <hr>
 
-    <div>
+    <span>
     <mat-grid-list cols="3" rowHeight="25px" style="background-color: aliceblue;">
         <mat-grid-tile><b>First Name</b></mat-grid-tile> 
         <mat-grid-tile><b>Last Name</b></mat-grid-tile>
@@ -45,31 +45,31 @@
         <mat-grid-tile>{{data.rei_description | uppercase}}</mat-grid-tile>
     </mat-grid-list>
     <hr><br>
-    </div>
+    </span>
 
 
-  <div *ngIf="responseMessage != '' " style="color:red;">    
+  <span *ngIf="responseMessage != '' " style="color:red;">    
     <br>
     {{responseMessage}}
-    <br><br>
-  </div>   
+    <br>
+  </span>   
   
-  <div mat-dialog-actions>
-    <div>
+  <span mat-dialog-actions>
+    <!-- <div> -->
         <button mat-button class="btn btn-secondary" style="margin-right: 10px;"
             (click)="onNoClick()">Close</button>
-    </div>      
+    <!-- </div>       -->
     <!-- <div *ngIf="data.reiStatus == 'PENDING'"> -->
         <button mat-button class="btn btn-secondary" style="margin-right: 10px;"
-            (click)="approveReimbursement()">Approve Reimbursement</button>
+            (click)="approveReimbursement()">Approve</button>
         <button mat-button class="btn btn-secondary" style="margin-right: 10px;"
-            (click)="denyReimbursement()">Deny Reimbursement</button>
+            (click)="denyReimbursement()">Reject</button>
 
-    <div *ngIf="data.receiptPicName != null">
+    <span *ngIf="data.receiptPicName != null">
         <button mat-button class="btn btn-secondary" style="margin-right: 10px;"
             (click)="viewReceipt()">View Receipt</button>
-    </div> 
-  </div>
+    </span> 
+  </span>
    
 <!-- </form> -->
-</div>
+</span>
